--- a/SwimmerApp/pom.xml
+++ b/SwimmerApp/pom.xml
@@ -43,6 +43,19 @@
                 </configuration>
             </plugin>
 			<plugin>
+			  <groupId>org.apache.maven.plugins</groupId>
+			  <artifactId>maven-war-plugin</artifactId>
+			  <version>2.6</version>
+			  <configuration>
+			    <webResources>
+			      <resource>
+			        <!-- this is relative to the pom.xml directory -->
+			        <directory>resource2</directory>
+			      </resource>
+			    </webResources>
+			  </configuration>
+			</plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
 				<version>2.3</version>
@@ -58,7 +71,7 @@
 							</excludes>
 						</filter>
 					</filters>
-				</configuration>
+				</configuration>				
 				<executions>
 					<execution>
 						<phase>package</phase>
